feat: complete memory, MCP, and skill gaps